test/arrays/iterations/iterModConstArr4.good
iterModConstArr4.chpl:4: error: illegal lvalue in assignment
